# chalk

./: CMakeLists.txt  README.md  chalk.vix  vix.json
examples/: 01_basic_colors.cpp  02_chaining.cpp  03_backgrounds.cpp  04_rgb_and_hex.cpp  05_strip_ansi.cpp  CMakeLists.txt
include/vix/chalk/: chalk.hpp
tests/: test_basic.cpp
